# nail

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: benchmark.yml
benches/: bigint_bench.rs  bigint_rs_bench.rs  comparison_all.rs  malachite_bench.rs  nail_bench.rs  num_bigint_bench.rs  rug_bench.rs
benches/common/: config.rs  mod.rs  test_data.rs
examples/: basic_usage.rs  cryptography.rs  performance.rs
scripts/: json_to_markdown.py
src/: lib.rs  main.rs  uint.rs
