[package]
name = "nail"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance fixed-size big integer library with configurable limb count"
documentation = "https://docs.rs/nail"
homepage = "https://github.com/your-username/nail"
repository = "https://github.com/your-username/nail"
license = "MIT OR Apache-2.0"
keywords = ["bigint", "arithmetic", "cryptography", "mathematics", "performance"]
categories = ["algorithms", "mathematics", "no-std"]
readme = "README.md"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
overflow-checks = false
debug-assertions = false

[profile.bench]
opt-level = 3
codegen-units = 1
lto = "fat"
overflow-checks = false
debug-assertions = false

[dependencies]
# No runtime dependencies - this is a zero-dependency library

[dev-dependencies]
num-bigint = "0.4"
criterion = "0.5"
rug = "1.24"
malachite = "0.4"


[[bench]]
name = "nail_bench"
harness = false

[[bench]]
name = "num_bigint_bench"
harness = false

[[bench]]
name = "rug_bench"
harness = false

[[bench]]
name = "malachite_bench"
harness = false

[[bench]]
name = "comparison_all"
harness = false
